# memory-palace

./: .gitignore
backend/: .env  Cargo.toml  db-shm  db-wal  db.db-shm  db.db-wal
backend/src/: auth.rs  db.rs  main.rs
backend/src/handlers/: comment.rs  post.rs  response_body.rs  user.rs
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  index.css  index.js  styles.css
frontend/src/api/: index.js
frontend/src/components/: Modal.jsx
frontend/src/components/Comments/: Comments.jsx
frontend/src/components/Comments/Comment/: Comment.jsx
frontend/src/components/Navbar/: Form.jsx  Login.jsx  Navbar.jsx
frontend/src/components/Posts/: Form.jsx  Posts.jsx
frontend/src/components/Posts/Post/: Post.jsx
frontend/src/components/Users/: Users.jsx
frontend/src/components/Users/User/: User.jsx
frontend/src/pages/: Cv.jsx  Home.jsx
frontend/src/store/: comments.js  index.js  posts.js  user.js  users.js
